# quantify

./: .gitignore  README.md  a_stock_list.csv  explore_hk.py  pyproject.toml  readme.md  requirements.txt  test_hk_cons.py
data/: stockstar_GZAppraisement_03690.html
docs/: strategy_one.md  项目设计文档.md
examples/: demo_strategy_one.py
scripts/: run_backtest.py
src/: main.py
src/core/: signal_result.py
src/quantify/: __init__.py
src/quantify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quantify/backtest/: __init__.py  engine.py
src/quantify/config/: __init__.py  settings.py
src/quantify/consts/: stack_code.py
src/quantify/data/: __init__.py  base.py  get_stock_number.py  local.py
src/quantify/execution/: __init__.py  broker.py
src/quantify/features/: A_stock.py  __init__.py  hk_tech.py  technical.py
src/quantify/strategies/: __init__.py  analysis.py  base.py  mean_reversion.py  strategy_one.py
src/quantify/utils/: __init__.py  logging.py
src/strategies/: strategy_one.py
tests/: __init__.py  test_settings.py  test_strategy_one.py  test_strategy_one_adapter.py
