 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "quantify"
 version = "0.1.0"
 description = "量化交易研究与回测框架"
 readme = "README.md"
 requires-python = ">=3.10"
 license = { text = "MIT" }
 authors = [
   { name = "Quant Engineering Team" }
 ]
 dependencies = [
   "numpy>=1.23",
   "pandas>=2.0",
   "scipy>=1.10",
   "matplotlib>=3.7",
   "pydantic>=2.0"
 ]

 [project.optional-dependencies]
 dev = [
   "pytest>=8.0",
   "black>=23.0",
   "ruff>=0.4"
 ]

 [tool.setuptools.packages.find]
 where = ["src"]

